<resources>
    <string name="app_name">Handzap App</string>
    <string name="form_listing">Form Listing</string>
    <string name="new_form">New Form</string>

    // Single Layout Strings
    <string name="dot">.</string>
    <string name="invite_btn">Invite</string>
    <string name="inbox_btn">Inbox</string>
    <string name="attachments">Attachments</string>

    // Form Screen
    <string name="form_title">Form Title</string>
    <string name="form_discription">Form Description</string>
    <string name="budget">Budget</string>
    <string name="usd">USD</string>
    <string name="rate">Rate</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="start_date">Start Date</string>
    <string name="job_term">Job Term</string>
    <string name="add_new_form">Add New Form</string>
    <string name="send">Send</string>
    <string name="views">%s views</string>

    // TextInputLayout Strings
    <string name="required">Required</string>

    // Custom Dialog String
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="delete_form">Delete Form</string>

    // Radio Button String
    <string name="no_preference">No Preference</string>
    <string name="fixed_budget">Fixed Budget</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="e_payment">E-Payment</string>
    <string name="cash">Cash</string>
    <string name="recurring_job">Recurring Job</string>
    <string name="same_day_job">Same Day Job</string>
    <string name="multi_days_job">Multi Days Job</string>

</resources>
